# ngewibu

./: .gitignore  Cargo.toml  mprocs.yaml  package-lock.json
ngewibu-frontend/: .eslintrc.cjs  .gitignore  bsconfig.json  bun.lockb  index.html  package.json
ngewibu-frontend/lib/bs/: .bsbuild  .bsdeps  .ninja_log  .sourcedirs.json  build.ninja  install.ninja
ngewibu-frontend/lib/bs/src/: App.ast  App.cmi  App.cmj  App.cmt  App.d  main.ast  main.cmi  main.cmj  main.cmt
ngewibu-frontend/lib/bs/src/components/: Test.ast  Test.cmi  Test.cmj  Test.cmt
ngewibu-frontend/src/: Api.res  App.bs.js  App.res  Decode.res
ngewibu-frontend/src/components/: Image.res  Test.bs.js  Test.gen.tsx  Test.res
ngewibu-frontend/src/page/: AnimeEpisode.res  Home.res  MangaDetail.res  MangaList.res  MangaRead.res  NotFound.res  Watch.res
src/: main.rs
src/providers/: get_video_url.js  mangabat.rs  mod.rs  otakudesu.rs
