[package]
name = "ngewibu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6"
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.18.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1.10.2"
base64 = "0.21.0"
thiserror = "1.0.0"
